Homogénéiser les messages suites aux demandes suppression de catégorie/poule